assets/css/style.css
/*-------------------------------------Fonts---------------------------------------------*/
@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,700&display=swap');

body {
    font-family: 'Roboto', sans-serif;
    background-color: black;
}

/*-------------------------------------Navbar---------------------------------------------*/

#navbarTogglerDemo01 {
    background-color: black;
}

button.btn.btn-default {
    color: #fafafa;
}

a.nav-link {
    color: #fafafa;
}

a.nav-link:hover {
    color: grey; 
}


/*-------------------------------------Headers-------------------------------------------*/

h2 {
    padding-top: 50px;
    text-align: center;
    text-transform: uppercase;
    font-weight: 700;
    color: #fafafa;
    font-style: italic;
    font-size: 50px;
}

h3 {
    padding-top: 10px;
    text-align: center;
    font-weight: 500;
    color: #fafafa;
    font-style: italic;
}

h2.tour-dates {
    padding-top: 70px;
    text-align: center;
    text-transform: uppercase;
    font-weight: 700;
    color: #fafafa;
    font-style: italic;
    font-size: 50px;
}

h4.more-videos {
    color: #fafafa;
    padding-left: 100px;
    padding-top: 20px;
    float: left;
}

/*-------------------------------------Images---------------------------------------------*/

.main-image {
    height: 80vh;
    max-width: 80vw;
    background: url("../images/damien-hero.jpg") no-repeat;
      -webkit-background-size: 100%;
      -moz-background-size: 100%;
      -o-background-size: 100%;
}

figure.img.main-image {
    margin: 0;
}

.tour-image {
    height: 100vh;
    max-width: 100vw;
    background: url("../images/damo-live2.jpg") no-repeat;
      -webkit-background-size: 100%;
      -moz-background-size: 100%;
      -o-background-size: 100%;
}

.music-image {
    height: 100vh;
    max-width: 100vw;
    background: url("../images/damo-live12.jpg") no-repeat;
      -webkit-background-size: 100%;
      -moz-background-size: 100%;
      -o-background-size: 100%;
}

.video-image {
    height: 100vh;
    max-width: 100vw;
    background: url("../images/damo-roar.jpg") no-repeat;
      -webkit-background-size: 100%;
      -moz-background-size: 100%;
      -o-background-size: 100%;
}

.gallery-image {
    height: 100vh;
    max-width: 100vw;
    background: url("../images/damo-lethal.jpg") no-repeat;
      -webkit-background-size: 100%;
      -moz-background-size: 100%;
      -o-background-size: 100%;
}    

.contact-image {
    height: 100vh;
    max-width: 100vw;
    background: url("../images/damo-smile.png") no-repeat;
      -webkit-background-size: 100%;
      -moz-background-size: 100%;
      -o-background-size: 100%;
      background-size: cover;
}

img.logo {
    padding-top: 10px;
}

/*-------------------------------------Body---------------------------------------------*/

.body-section {
    margin: 50px 17vw;
    display: grid;
    letter-spacing: 1px;
    color: #fafafa;
}

.text-center {
    padding-bottom: 100px; 
}

.space {
    border-top: 5px solid darkgrey;
    max-width: 50%;
}


/*------------------------------------Tour Section------------------------------------------*/

.space-tour {
    border-top: 5px solid darkgrey;
    max-width: 50%;
}

.text-center-tour {
    margin: auto;
}

.track-me {
    color: #fafafa;
    padding-bottom: 50px;
    text-align: center;
    padding-top: 50px;
}

.track-me a {
    color: #fafafa;
    text-decoration: underline;
}


/*------------------------------------Music Section------------------------------------------*/

.music-space {
    border-top: 5px solid darkgrey;
    max-width: 50%;
    padding-bottom: 70px;
}

section.body-section {
    text-align: center; 
    line-height: 50px;
}

section.discography.container-fluid {
    padding-left: 50px;
    padding-right: 50px;
}

/*-------------------------------------Music Cards-------------------------------------------*/

img.card-img-top,
div.card-body {
    border: 2px solid grey;
}

div.col.mb-4 {
    padding-bottom: 50px;
}

div.card-body {
    background-color: black;
    color: #fafafa;
    text-align: center;
    padding-right: 50px;
    padding-left: 50px;
}


/*------------------------------------Gallery Section------------------------------------------*/

.gallery-space {
    border-top: 5px solid darkgrey;
    max-width: 50%;
    padding-bottom: 70px;
}

.row {
  display: flex;
  flex-wrap: wrap;
  padding: 0 4px;
}

.column {
  flex: 25%;
  max-width: 25%;
  padding: 0 4px;
}

.column img {
  margin-top: 8px;
  vertical-align: middle;
  width: 100%;
}

div.column {
    padding-bottom: 50px;
}

/*------------------------------------video Section------------------------------------------*/

.videos-section {
    max-width: 100vw;
    text-align: center;
    margin-bottom: 20px;
}

div.more-video-iframe {
    display: inline;
    padding: 20px;
    margin: 0;
}

section.more-video-container {
    padding-top: 70px;
    padding-bottom: 50px;
    text-align: center;
    margin: 0;
}

.video-block {
    padding: 20px;
}

.video-space {
    border-top: 5px solid darkgrey;
    max-width: 50%;
    padding-bottom: 50px;
}

.video-space-lower {
    border-top: 5px solid darkgrey;
    max-width: 50%;
    padding-bottom: 50px;
}

p.video-paragraph {
    color: #fafafa;
    padding-top: 20px;
    text-align: center;
    margin: 0;
}

/*----------------------------------Contact Section--------------------------------------*/

* {box-sizing: border-box;}

input[type=text], select, textarea {
  width: 100%;
  padding: 12px;
  border: 2px solid black;
  border-radius: 4px;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 16px;
  resize: vertical;
}

input[type=submit] {
  background-color: #fafafa;
  color: black;
  padding: 12px 20px;
  border: 2px solid black;
  border-radius: 4px;
  cursor: pointer;
}

input[type=submit]:hover {
  background-color: #8E8B8B;
  color: #fafafa;
}

.container {
  border-radius: 5px;
  background-color: grey;
  padding: 20px;
}

label {
    color: #fafafa;
}

.contact-form {
    margin-bottom: 100px;
    margin-top: 50px;
}
 
/*-------------------------------------Buttons-------------------------------------------*/

a.btn {
    background-color: grey;
    border-radius: 100px;
    color: #fafafa;
    text-transform: uppercase;
    font-weight: 500;
    letter-spacing: 1px;
}

.button-tour {
    text-align: center;
}

.btn-space {
    margin: 25px;
}

p.card-text {
    padding-bottom: 20px;
}


/*-------------------------------------Footer-------------------------------------------*/

.social-links {
    background-color: grey;
    text-align: center;
    padding-top: 25px;
}

.social i {
    font-size: 30px;
    letter-spacing: 25px;
    color: #fafafa;
    text-align: center;
    padding-top: 25px;
}

.john {
    color: #fafafa;
    padding-bottom: 35px;
}

.john a {
    color: #fafafa;
}

/*-------------------------------------------Media Queries-------------------------------------------*/


/*---Mobile---*/

@media screen and (max-width: 767px) {

.column {
    flex: 100%;
    max-width: 100%;
}
/*navbar collapse to display on mobile*/
.navbar {
    float: right;
    font-size: 25px;
    text-align: center;
}

div#logo {
    text-align: center;
}

button.navbar-toggler {
    background-color: grey;
}
/*hero images to display on mobile*/
figure.img {
    max-height: 60vh;
}
/*headers to appear smaller on mobile display*/
h2.header-upper {
    font-size: 30px;
}

h3.header-lower {
    font-size: 20px;
}

h4.more-videos {
    display: none;
}

/*opening paragraph fix to display on mobile*/
section.body-section {
    line-height: inherit; 
}
/*fixing tour dates display for mobile*/
div.container-fluid {
    padding-top: 10px;
    padding-bottom: 10px;
}
/*fixing video section display on mobile / removed main video and paragraph*/
section.video-container {
    display: none;
}

section.more-video-container {
    padding-top: 0px;
}

hr.video-space-lower {
    display: none;
}

div.more-video-iframe {
    padding-bottom: 10px;
    display: inherit;
}
/*Gallery display fix of to much padding in mobile view*/
div.column {
    padding-bottom: 5px;
}

hr.gallery-space {
    padding: 0;
}
/*fix for contact image to display center of mobile view*/
figure.img.contact-image {
    background-size: 100% 130%;
}
/*spacing for icons in footer*/
.social i {
    letter-spacing: 15px;
}


}

/*---Tablet---*/

@media screen and (min-width: 768px) and (max-width: 1024px) {

.column {
    flex: 50%;
    max-width: 50%;
  }


}




/*---Desktop---*/

@media screen and (min-width: 1024px) {


}

